force-app/main/default/objects/EmailMessage/fields/bpats__Clicks_Count__c.field-meta.xml
<CustomField>
    <fullName>bpats__Clicks_Count__c</fullName>
    <label>Clicks Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>