force-app/main/default/objects/EmailMessage/fields/bpats__Last_Event_Time__c.field-meta.xml
<CustomField>
    <fullName>bpats__Last_Event_Time__c</fullName>
    <label>Last Event Time</label>
    <type>DateTime</type>
</CustomField>