force-app/main/default/objects/EmailMessage/fields/bpats__Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>bpats__Mobile_Phone__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>