force-app/main/default/objects/EmailMessage/fields/bpats__Status__c.field-meta.xml
<CustomField>
    <fullName>bpats__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>