force-app/main/default/objects/EmailMessage/fields/bpats__Twilio_External_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>bpats__Twilio_External_Message_Id__c</fullName>
    <externalId>true</externalId>
    <label>Twilio External Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>